--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
 
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     {% endblock %}
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
 
